# IBM-RAG-and-Agentic-AI-Repo

./: .gitignore  main.py  pyproject.toml
Build RAG Applications/Module1/: pipelineLlamaIndex.py
Build RAG Applications/Module1/QA_Chatbot_Lab/: README.md  ingest.py  requirements.txt
Build RAG Applications/Module2/Gradio_Lab/: gradio_demo.py  installations.txt
Build RAG Applications/Module3/: queryEngineCustomizations.py
Build RAG Applications/Module3/icebraker/: app.py  config.py
Develop Generative AI Applications/Module1/lcel/: in_context_learning_lab.py  lab_fewshot_prompting.py  lab_zero_prompting.py  lcel_lists.py  lcel_modern_approach.py  lcel_stream.py  prompt_template.py
Develop Generative AI Applications/Module2/: Build Smarter AI Apps Empower LLMs with LangChain.md  ChatPromptTemplate.py  MessagePlaceholder.py  agents.py  conversation_buffer.py  conversation_summary.py  documents_and_PDF.py  embedding_models.py  example_secuential_chain.py  example_structured_output.py  exercise1.py  exercise3Documents.py  exercise4_SearchEngine.py  exercise7_Agents.py  memory.py  movie_parserJSON.py  output_parsersCVS.py  output_parsersJSON.py  parent_document_retriever.py  retrieverQA.py  retriever_models.py  secuencial_Chain.py  text_splitters.py  url_website.py
Develop Generative AI Applications/Module3/genai_fastapi_app/: config.py  main.py  model.py
chroma.db/: chroma.sqlite3
core/: __init__.py  chunk_analyzer.py  openai_client.py  pricing.py  watson_client.py
docs/Develop Generative AI Applications/Module3/: fastapi-lab-instructions.md  (+1 more)
labs/Develop Generative AI Applications/: In-Context Learning and Prompt Templates for Advanced AI.md
lcel/: lab_advance_prompting.py  lab_chainofthought_prompting.py  lab_oneshot_prompting.py  lab_self_prompting.py  lcel_modern_approach.py  lcel_stream.py  prompt_template.py  rigid_method.py
(+8 files in other folders)
