[project]
name = "ragandagenticai"
version = "0.1.0"
description = "The purpouse of this ecosystem of script is not more that learn langchain"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ibm-watsonx-ai>=1.5.13",
    "langchain>=1.3.9",
    "langchain-community>=0.4.2",
    "langchain-ibm>=1.1.0",
    "langchain-openai>=1.3.2",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
]
