[project]
name = "ragandagenticai"
version = "0.1.0"
description = "The purpouse of this ecosystem of script is not more that learn langchain"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.15.0",
    "chromadb>=1.5.9",
    "gradio>=6.19.0",
    "huggingface-hub>=1.20.1",
    "ibm-watsonx-ai>=1.5.13",
    "langchain>=1.3.9",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.2",
    "langchain-experimental>=0.4.2",
    "langchain-huggingface>=1.2.2",
    "langchain-ibm>=1.1.0",
    "langchain-openai>=1.3.2",
    "langchainhub>=0.1.21",
    "pydantic>=2.13.4",
    "pypdf>=6.13.3",
    "python-dotenv>=1.2.2",
    "sentence-transformers>=5.6.0",
    "tenacity>=9.1.4",
    "transformers>=5.12.1",
    "wget>=3.2",
]
